@@ -4,18 +4,6 @@
  */
 package org.hibernate.orm.test.schemaupdate;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.sql.SQLException;
-import java.sql.Statement;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.EnumSet;
-import java.util.HashSet;
-import java.util.Map;
-import java.util.Set;
-import java.util.TreeMap;
 import jakarta.persistence.CollectionTable;
 import jakarta.persistence.Column;
 import jakarta.persistence.ElementCollection;
@@ -32,69 +20,100 @@ import jakarta.persistence.ManyToOne;
 import jakarta.persistence.OneToMany;
 import jakarta.persistence.PrimaryKeyJoinColumn;
 import jakarta.persistence.Table;
-
-import org.hibernate.boot.MetadataSources;
+import org.hamcrest.MatcherAssert;
 import org.hibernate.boot.registry.StandardServiceRegistry;
 import org.hibernate.boot.registry.StandardServiceRegistryBuilder;
-import org.hibernate.boot.spi.MetadataImplementor;
-import org.hibernate.cfg.AvailableSettings;
 import org.hibernate.dialect.SQLServerDialect;
+import org.hibernate.testing.orm.junit.DomainModel;
+import org.hibernate.testing.orm.junit.DomainModelScope;
+import org.hibernate.testing.orm.junit.RequiresDialect;
+import org.hibernate.testing.orm.junit.ServiceRegistryFunctionalTesting;
+import org.hibernate.testing.orm.junit.ServiceRegistryProducer;
+import org.hibernate.testing.orm.junit.ServiceRegistryScope;
+import org.hibernate.testing.transaction.TransactionUtil;
+import org.hibernate.testing.util.ServiceRegistryUtil;
 import org.hibernate.tool.hbm2ddl.SchemaExport;
 import org.hibernate.tool.hbm2ddl.SchemaUpdate;
 import org.hibernate.tool.hbm2ddl.SchemaValidator;
-import org.hibernate.tool.schema.JdbcMetadaAccessStrategy;
+import org.hibernate.tool.schema.JdbcMetadataAccessStrategy;
 import org.hibernate.tool.schema.TargetType;
+import org.jboss.logging.Logger;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInstance;
+import org.junit.jupiter.api.io.TempDir;
+import org.junit.jupiter.params.ParameterizedClass;
+import org.junit.jupiter.params.provider.MethodSource;
 
-import org.hibernate.testing.RequiresDialect;
-import org.hibernate.testing.junit4.BaseUnitTestCase;
-import org.hibernate.testing.orm.junit.DialectContext;
-import org.hibernate.testing.transaction.TransactionUtil;
-import org.hibernate.testing.util.ServiceRegistryUtil;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import java.io.File;
+import java.nio.file.Files;
+import java.sql.SQLException;
+import java.sql.Statement;
+import java.util.Collection;
+import java.util.EnumSet;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.TreeMap;
 
 import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.assertThat;
+import static org.hibernate.cfg.MappingSettings.KEYWORD_AUTO_QUOTING_ENABLED;
+import static org.hibernate.cfg.SchemaToolingSettings.HBM2DDL_JDBC_METADATA_EXTRACTOR_STRATEGY;
 
 /**
  * @author Andrea Boriero
  */
-@RunWith(Parameterized.class)
 @RequiresDialect(SQLServerDialect.class)
-public class SchemaUpdateSQLServerTest extends BaseUnitTestCase {
+@ParameterizedClass
+@MethodSource("parameters")
+@TestInstance( TestInstance.Lifecycle.PER_METHOD )
+@ServiceRegistryFunctionalTesting
+@DomainModel(annotatedClasses = {
+		SchemaUpdateSQLServerTest.LowercaseTableNameEntity.class,
+		SchemaUpdateSQLServerTest.TestEntity.class,
+		SchemaUpdateSQLServerTest.UppercaseTableNameEntity.class,
+		SchemaUpdateSQLServerTest.MixedCaseTableNameEntity.class,
+		SchemaUpdateSQLServerTest.Match.class,
+		SchemaUpdateSQLServerTest.InheritanceRootEntity.class,
+		SchemaUpdateSQLServerTest.InheritanceChildEntity.class,
+		SchemaUpdateSQLServerTest.InheritanceSecondChildEntity.class
+})
+public class SchemaUpdateSQLServerTest implements ServiceRegistryProducer {
+	private static final Logger log =  Logger.getLogger( SchemaUpdateSQLServerTest.class );
 
-	@Parameterized.Parameters
-	public static Collection<String> parameters() {
-		return Arrays.asList(
-				new String[] {JdbcMetadaAccessStrategy.GROUPED.toString(), JdbcMetadaAccessStrategy.INDIVIDUALLY.toString()}
+	public static Collection<JdbcMetadataAccessStrategy> parameters() {
+		return List.of(
+				JdbcMetadataAccessStrategy.GROUPED,
+				JdbcMetadataAccessStrategy.INDIVIDUALLY
 		);
 	}
 
-	@Parameterized.Parameter
-	public String jdbcMetadataExtractorStrategy;
+	public JdbcMetadataAccessStrategy jdbcMetadataExtractorStrategy;
+	private final File output;
 
-	private File output;
-	private StandardServiceRegistry ssr;
-	private MetadataImplementor metadata;
+	public SchemaUpdateSQLServerTest(
+			JdbcMetadataAccessStrategy jdbcMetadataExtractorStrategy,
+			@TempDir File outputDir) {
+		this.jdbcMetadataExtractorStrategy = jdbcMetadataExtractorStrategy;
+		this.output = new File( outputDir, "update_script.sql" );
+	}
 
-	@Before
-	public void setUp() throws IOException {
-		if(!SQLServerDialect.class.isAssignableFrom( DialectContext.getDialect().getClass() )) {
-			return;
-		}
-
-		output = File.createTempFile( "update_script", ".sql" );
-		output.deleteOnExit();
-		ssr = ServiceRegistryUtil.serviceRegistryBuilder()
-				.applySetting( AvailableSettings.KEYWORD_AUTO_QUOTING_ENABLED, "true" )
-				.applySetting( AvailableSettings.HBM2DDL_JDBC_METADATA_EXTRACTOR_STRATEGY, jdbcMetadataExtractorStrategy )
+	@Override
+	public StandardServiceRegistry produceServiceRegistry(StandardServiceRegistryBuilder builder) {
+		return ServiceRegistryUtil.serviceRegistryBuilder()
+				.applySetting( KEYWORD_AUTO_QUOTING_ENABLED, "true" )
+				.applySetting( HBM2DDL_JDBC_METADATA_EXTRACTOR_STRATEGY, jdbcMetadataExtractorStrategy )
 				.build();
+	}
+
+	@BeforeEach
+	void prepare(ServiceRegistryScope registryScope, DomainModelScope modelScope) {
+		var registry = registryScope.getRegistry();
 
 		try {
-			TransactionUtil.doWithJDBC( ssr, connection -> {
+			TransactionUtil.doWithJDBC( registry, connection -> {
 				try (Statement statement = connection.createStatement()) {
 					connection.setAutoCommit( true );
 					statement.executeUpdate( "DROP DATABASE hibernate_orm_test_collation" );
@@ -105,7 +124,7 @@ public class SchemaUpdateSQLServerTest extends BaseUnitTestCase {
 			log.debug( e.getMessage() );
 		}
 		try {
-			TransactionUtil.doWithJDBC( ssr, connection -> {
+			TransactionUtil.doWithJDBC( registry, connection -> {
 				try (Statement statement = connection.createStatement()) {
 					connection.setAutoCommit( true );
 					statement.executeUpdate( "CREATE DATABASE hibernate_orm_test_collation COLLATE Latin1_General_CS_AS" );
@@ -117,52 +136,35 @@ public class SchemaUpdateSQLServerTest extends BaseUnitTestCase {
 			log.debug( e.getMessage() );
 		}
 
-		final MetadataSources metadataSources = new MetadataSources( ssr );
-		metadataSources.addAnnotatedClass( LowercaseTableNameEntity.class );
-		metadataSources.addAnnotatedClass( TestEntity.class );
-		metadataSources.addAnnotatedClass( UppercaseTableNameEntity.class );
-		metadataSources.addAnnotatedClass( MixedCaseTableNameEntity.class );
-		metadataSources.addAnnotatedClass( Match.class );
-		metadataSources.addAnnotatedClass( InheritanceRootEntity.class );
-		metadataSources.addAnnotatedClass( InheritanceChildEntity.class );
-		metadataSources.addAnnotatedClass( InheritanceSecondChildEntity.class );
-
-		metadata = (MetadataImplementor) metadataSources.buildMetadata();
-		metadata.orderColumns( false );
-		metadata.validate();
+		var model = modelScope.getDomainModel();
+		model.orderColumns( false );
+		model.validate();
 	}
 
-	@After
-	public void tearsDown() {
-		if(!SQLServerDialect.class.isAssignableFrom( DialectContext.getDialect().getClass() )) {
-			return;
-		}
-
+	@AfterEach
+	void tearsDown(DomainModelScope modelScope) {
 		new SchemaExport().setHaltOnError( true )
 				.setOutputFile( output.getAbsolutePath() )
 				.setFormat( false )
-				.drop( EnumSet.of( TargetType.DATABASE ), metadata );
-		StandardServiceRegistryBuilder.destroy( ssr );
+				.drop( EnumSet.of( TargetType.DATABASE ), modelScope.getDomainModel() );
 	}
 
 	@Test
-	public void testSchemaUpdateAndValidation() throws Exception {
-		if(!SQLServerDialect.class.isAssignableFrom( DialectContext.getDialect().getClass() )) {
-			return;
-		}
+	public void testSchemaUpdateAndValidation(DomainModelScope modelScope) throws Exception {
+		new SchemaUpdate()
+				.setHaltOnError( true )
+				.execute( EnumSet.of( TargetType.DATABASE ), modelScope.getDomainModel() );
 
-		new SchemaUpdate().setHaltOnError( true )
-				.execute( EnumSet.of( TargetType.DATABASE ), metadata );
+		new SchemaValidator().validate( modelScope.getDomainModel() );
 
-		new SchemaValidator().validate( metadata );
-
-		new SchemaUpdate().setHaltOnError( true )
+		new SchemaUpdate()
+				.setHaltOnError( true )
 				.setOutputFile( output.getAbsolutePath() )
 				.setFormat( false )
-				.execute( EnumSet.of( TargetType.DATABASE, TargetType.SCRIPT ), metadata );
+				.execute( EnumSet.of( TargetType.DATABASE, TargetType.SCRIPT ), modelScope.getDomainModel() );
 
 		final String fileContent = new String( Files.readAllBytes( output.toPath() ) );
-		assertThat( "The update output file should be empty", fileContent, is( "" ) );
+		MatcherAssert.assertThat( "The update output file should be empty", fileContent, is( "" ) );
 	}
 
 	@Entity(name = "TestEntity")
