@@ -6,6 +6,7 @@ package org.hibernate.orm.test.type;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.SortedSet;
 import java.util.TreeSet;
 
@@ -42,12 +43,12 @@ import jakarta.persistence.NamedQuery;
 import jakarta.persistence.Table;
 import jakarta.persistence.TypedQuery;
 
-import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.assertThat;
+import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * @author Christian Beikov
  */
+@SuppressWarnings("JUnitMalformedDeclaration")
 @BootstrapServiceRegistry(
 		// Clear the type cache, otherwise we might run into ORA-21700: object does not exist or is marked for delete
 		integrators = SharedDriverManagerTypeCacheClearingIntegrator.class
@@ -66,16 +67,17 @@ public class BasicSortedSetTest {
 			em.persist( new TableWithIntegerSortedSet( 2L, new TreeSet<>( Arrays.asList( 512, 112, 0 ) ) ) );
 			em.persist( new TableWithIntegerSortedSet( 3L, null ) );
 
-			Query q;
-			q = em.createNamedQuery( "TableWithIntegerSortedSet.Native.insert" );
-			q.setParameter( "id", 4L );
-			q.setParameter( "data", new TreeSet<>( Arrays.asList( 0 ) ), integerSortedSetType );
-			q.executeUpdate();
+			//noinspection deprecation,unchecked
+			em.createNamedQuery( "TableWithIntegerSortedSet.Native.insert" )
+					.setParameter( "id", 4L )
+					.setParameter( "data", new TreeSet<>( List.of( 0 ) ), integerSortedSetType )
+					.executeUpdate();
 
-			q = em.createNativeQuery( "INSERT INTO table_with_integer_sorted_set(id, the_sorted_set) VALUES ( :id , :data )" );
-			q.setParameter( "id", 5L );
-			q.setParameter( "data", new TreeSet<>( Arrays.asList( 0 ) ), integerSortedSetType );
-			q.executeUpdate();
+			//noinspection deprecation,unchecked
+			em.createNativeQuery( "INSERT INTO table_with_integer_sorted_set(id, the_sorted_set) VALUES ( :id , :data )" )
+					.setParameter( "id", 5L )
+					.setParameter( "data", new TreeSet<>( List.of( 0 ) ), integerSortedSetType )
+					.executeUpdate();
 		} );
 	}
 
@@ -89,13 +91,13 @@ public class BasicSortedSetTest {
 		scope.inSession( em -> {
 			TableWithIntegerSortedSet tableRecord;
 			tableRecord = em.find( TableWithIntegerSortedSet.class, 1L );
-			assertThat( tableRecord.getTheSortedSet(), is( Collections.emptySortedSet() ) );
+			assertThat( tableRecord.getTheSortedSet() ).isEmpty();
 
 			tableRecord = em.find( TableWithIntegerSortedSet.class, 2L );
-			assertThat( tableRecord.getTheSortedSet(), is( new TreeSet<>( Arrays.asList( 512, 112, 0 ) ) ) );
+			assertThat( tableRecord.getTheSortedSet() ).isEqualTo( new TreeSet<>( Arrays.asList( 512, 112, 0 ) ) );
 
 			tableRecord = em.find( TableWithIntegerSortedSet.class, 3L );
-			assertThat( tableRecord.getTheSortedSet(), is( (Object) null ) );
+			assertThat( tableRecord.getTheSortedSet() ).isNull();
 		} );
 	}
 
@@ -105,7 +107,7 @@ public class BasicSortedSetTest {
 			TypedQuery<TableWithIntegerSortedSet> tq = em.createNamedQuery( "TableWithIntegerSortedSet.JPQL.getById", TableWithIntegerSortedSet.class );
 			tq.setParameter( "id", 2L );
 			TableWithIntegerSortedSet tableRecord = tq.getSingleResult();
-			assertThat( tableRecord.getTheSortedSet(), is( new TreeSet<>( Arrays.asList( 512, 112, 0 ) ) ) );
+			assertThat( tableRecord.getTheSortedSet() ).isEqualTo( new TreeSet<>( Arrays.asList( 512, 112, 0 ) ) );
 		} );
 	}
 
@@ -119,7 +121,7 @@ public class BasicSortedSetTest {
 			TypedQuery<TableWithIntegerSortedSet> tq = em.createNamedQuery( "TableWithIntegerSortedSet.JPQL.getByData", TableWithIntegerSortedSet.class );
 			tq.setParameter( "data", Collections.emptySortedSet() );
 			TableWithIntegerSortedSet tableRecord = tq.getSingleResult();
-			assertThat( tableRecord.getId(), is( 1L ) );
+			assertThat( tableRecord.getId() ).isEqualTo( 1L );
 		} );
 	}
 
@@ -129,7 +131,7 @@ public class BasicSortedSetTest {
 			TypedQuery<TableWithIntegerSortedSet> tq = em.createNamedQuery( "TableWithIntegerSortedSet.Native.getById", TableWithIntegerSortedSet.class );
 			tq.setParameter( "id", 2L );
 			TableWithIntegerSortedSet tableRecord = tq.getSingleResult();
-			assertThat( tableRecord.getTheSortedSet(), is( new TreeSet<>( Arrays.asList( 512, 112, 0 ) ) ) );
+			assertThat( tableRecord.getTheSortedSet() ).isEqualTo( new TreeSet<>( Arrays.asList( 512, 112, 0 ) ) );
 		} );
 	}
 
@@ -146,14 +148,14 @@ public class BasicSortedSetTest {
 		scope.inSession( em -> {
 			final Dialect dialect = em.getDialect();
 			final String op = dialect.supportsDistinctFromPredicate() ? "IS NOT DISTINCT FROM" : "=";
-			final String param = integerSortedSetType.getJdbcType().wrapWriteExpression( ":data", dialect );
+			final String param = integerSortedSetType.getJdbcType().wrapWriteExpression( ":data", null, dialect );
 			Query<TableWithIntegerSortedSet> tq = em.createNativeQuery(
 					"SELECT * FROM table_with_integer_sorted_set t WHERE the_sorted_set " + op + " " + param,
 					TableWithIntegerSortedSet.class
 			);
 			tq.setParameter( "data", new TreeSet<>( Arrays.asList( 512, 112, 0 ) ), integerSortedSetType );
 			TableWithIntegerSortedSet tableRecord = tq.getSingleResult();
-			assertThat( tableRecord.getId(), is( 2L ) );
+			assertThat( tableRecord.getId() ).isEqualTo( 2L );
 		} );
 	}
 
