@@ -4,13 +4,6 @@
  */
 package org.hibernate.testing.orm.junit;
 
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Optional;
-import java.util.Set;
-import java.util.function.Consumer;
-import java.util.function.Function;
-
 import org.hibernate.Interceptor;
 import org.hibernate.SessionFactoryObserver;
 import org.hibernate.StatelessSession;
@@ -20,31 +13,37 @@ import org.hibernate.boot.spi.MetadataImplementor;
 import org.hibernate.cfg.AvailableSettings;
 import org.hibernate.engine.spi.SessionFactoryImplementor;
 import org.hibernate.engine.spi.SessionImplementor;
+import org.hibernate.engine.spi.StatelessSessionImplementor;
 import org.hibernate.internal.util.StringHelper;
 import org.hibernate.resource.jdbc.spi.StatementInspector;
+import org.hibernate.testing.jdbc.SQLStatementInspector;
+import org.hibernate.testing.orm.transaction.TransactionUtil;
 import org.hibernate.tool.schema.Action;
 import org.hibernate.tool.schema.spi.SchemaManagementToolCoordinator;
 import org.hibernate.tool.schema.spi.SchemaManagementToolCoordinator.ActionGrouping;
-
-import org.hibernate.testing.jdbc.SQLStatementInspector;
-import org.hibernate.testing.orm.transaction.TransactionUtil;
+import org.jboss.logging.Logger;
 import org.junit.jupiter.api.extension.BeforeEachCallback;
 import org.junit.jupiter.api.extension.ExtensionContext;
 import org.junit.jupiter.api.extension.TestExecutionExceptionHandler;
 import org.junit.jupiter.api.extension.TestInstancePostProcessor;
 import org.junit.platform.commons.support.AnnotationSupport;
 
-import org.jboss.logging.Logger;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.function.Consumer;
+import java.util.function.Function;
 
-/**
- * hibernate-testing implementation of a few JUnit5 contracts to support SessionFactory-based testing,
- * including argument injection (or see {@link SessionFactoryScopeAware})
- *
- * @see SessionFactoryScope
- * @see DomainModelExtension
- *
- * @author Steve Ebersole
- */
+/// JUnit Jupiter [extension][org.junit.jupiter.api.extension.Extension] to support
+/// SessionFactory-based functional testing.
+///
+/// @see SessionFactoryScope
+/// @see DomainModelExtension
+///
+/// @implNote Leverages the [domain model][DomainModelScope] defined using the [DomainModelExtension].
+///
+/// @author Steve Ebersole
 public class SessionFactoryExtension
 		implements TestInstancePostProcessor, BeforeEachCallback, TestExecutionExceptionHandler {
 
@@ -76,7 +75,7 @@ public class SessionFactoryExtension
 
 		if ( sfAnnRef.isPresent()
 				|| SessionFactoryProducer.class.isAssignableFrom( context.getRequiredTestClass() ) ) {
-			final DomainModelScope domainModelScope = DomainModelExtension.findDomainModelScope( testInstance, context );
+			final DomainModelScope domainModelScope = DomainModelExtension.getOrCreateDomainModelScope( testInstance, context );
 			final SessionFactoryScope created = createSessionFactoryScope( testInstance, sfAnnRef, domainModelScope, context );
 			locateExtensionStore( testInstance, context ).put( SESSION_FACTORY_KEY, created );
 		}
@@ -135,7 +134,7 @@ public class SessionFactoryExtension
 						}
 
 						if ( ! sessionFactoryConfig.interceptorClass().equals( Interceptor.class ) ) {
-							sessionFactoryBuilder.applyInterceptor( sessionFactoryConfig.interceptorClass().newInstance() );
+							sessionFactoryBuilder.applyInterceptor( sessionFactoryConfig.interceptorClass().getDeclaredConstructor().newInstance() );
 						}
 
 						final Class<? extends StatementInspector> explicitInspectorClass = sessionFactoryConfig.statementInspectorClass();
@@ -147,8 +146,10 @@ public class SessionFactoryExtension
 						}
 						sessionFactoryBuilder.applyCollectionsInDefaultFetchGroup( sessionFactoryConfig.applyCollectionsInDefaultFetchGroup() );
 
-						final SessionFactoryImplementor sessionFactory = (SessionFactoryImplementor) sessionFactoryBuilder.build();
+						sessionFactoryConfig.sessionFactoryConfigurer().getDeclaredConstructor().newInstance()
+								.accept( sessionFactoryBuilder );
 
+						final SessionFactoryImplementor sessionFactory = (SessionFactoryImplementor) sessionFactoryBuilder.build();
 						if ( sessionFactoryConfig.exportSchema() ) {
 							prepareSchemaExport( sessionFactory, model, sessionFactoryConfig.createSecondarySchemas() );
 						}
@@ -232,7 +233,7 @@ public class SessionFactoryExtension
 		throw throwable;
 	}
 
-	private static class SessionFactoryScopeImpl implements SessionFactoryScope, ExtensionContext.Store.CloseableResource {
+	private static class SessionFactoryScopeImpl implements SessionFactoryScope, AutoCloseable {
 		private final DomainModelScope modelScope;
 		private final SessionFactoryProducer producer;
 
@@ -288,6 +289,7 @@ public class SessionFactoryExtension
 			releaseSessionFactory();
 		}
 
+		@Override
 		public void releaseSessionFactory() {
 			if ( sessionFactory != null ) {
 				log.debug( "Releasing SessionFactory" );
@@ -372,18 +374,36 @@ public class SessionFactoryExtension
 		}
 
 		@Override
+		public void inTransaction(Function<SessionFactoryImplementor, SessionImplementor> sessionProducer, Consumer<SessionImplementor> action) {
+			log.trace( "inTransaction(Function,Consumer)" );
+
+			try (SessionImplementor session = sessionProducer.apply( getSessionFactory() )) {
+				TransactionUtil.inTransaction( session, action );
+			}
+		}
+
+		@Override
 		public <T> T fromTransaction(SessionImplementor session, Function<SessionImplementor, T> action) {
 			log.trace( "fromTransaction(Session,Function)" );
 			return TransactionUtil.fromTransaction( session, action );
 		}
 
 		@Override
-		public void inStatelessSession(Consumer<StatelessSession> action) {
+		public <T> T fromTransaction(Function<SessionFactoryImplementor, SessionImplementor> sessionProducer, Function<SessionImplementor, T> action) {
+			log.trace( "fromTransaction(Function,Function)" );
+
+			try (SessionImplementor session = sessionProducer.apply( getSessionFactory() )) {
+				return TransactionUtil.fromTransaction( session, action );
+			}
+		}
+
+		@Override
+		public void inStatelessSession(Consumer<StatelessSessionImplementor> action) {
 			log.trace( "#inStatelessSession(Consumer)" );
 
 			try ( final StatelessSession statelessSession = getSessionFactory().openStatelessSession() ) {
 				log.trace( "StatelessSession opened, calling action" );
-				action.accept( statelessSession );
+				action.accept( (StatelessSessionImplementor) statelessSession );
 			}
 			finally {
 				log.trace( "StatelessSession close - auto-close block" );
@@ -391,12 +411,12 @@ public class SessionFactoryExtension
 		}
 
 		@Override
-		public void inStatelessTransaction(Consumer<StatelessSession> action) {
+		public void inStatelessTransaction(Consumer<StatelessSessionImplementor> action) {
 			log.trace( "#inStatelessTransaction(Consumer)" );
 
 			try ( final StatelessSession statelessSession = getSessionFactory().openStatelessSession() ) {
 				log.trace( "StatelessSession opened, calling action" );
-				inStatelessTransaction( statelessSession, action );
+				inStatelessTransaction( (StatelessSessionImplementor) statelessSession, action );
 			}
 			finally {
 				log.trace( "StatelessSession close - auto-close block" );
@@ -404,7 +424,7 @@ public class SessionFactoryExtension
 		}
 
 		@Override
-		public void inStatelessTransaction(StatelessSession session, Consumer<StatelessSession> action) {
+		public void inStatelessTransaction(StatelessSessionImplementor session, Consumer<StatelessSessionImplementor> action) {
 			log.trace( "inStatelessTransaction(StatelessSession,Consumer)" );
 
 			TransactionUtil.inTransaction( session, action );
